--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   </div>
   <div class="popup">
     <div class="popup__container">
-      <button class="popup__close-button"></button>
-      <h2 class="popup__title">Редактировать профиль</h2>
+      <button class="popup__close-button" type="button"></button>
+      <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form">
       <input type="text" class="popup__input-form" name="name">
       <input type="text" class="popup__input-form" name="profession">
