--- a/index.html
+++ b/index.html
@@ -111,21 +111,19 @@
       <div class="popup__container">
         <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="editprofile">
+        <form class="popup__form" name="profile-value">
           <input
             type="text"
             value="text"
-            id="user-name"
             class="popup__input-form"
-            name="user-name"
+            name="name"
             required placeholder="Имя"
           />
           <input
             type="text"
             value="text"
-            id="user-profession"
             class="popup__input-form"
-            name="user-profession"
+            name="profession"
             required placeholder="Профессия"
           />
           <button type="submit" class="popup__save-button" aria-label="Сохранить">Сохранить</button>
