--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <div class="popup">
       <div class="popup__container">
         <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+        <form class="popup__form" name="editprofile">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="profile-value">
           <input
             type="text"
             value="text"
