--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="popup popup_preview-image">
-      <div class="popup__container popup__container-image">
+      <div class="popup__container-image">
         <button
           type="button"
           class="popup__close-button"
