--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </div>
     </div>
 
-    <template id="card-template">
+    <template class="card-template" id="card-template">
       <li class="card">
         <button
           class="card__delete-button"
@@ -172,8 +172,6 @@
       </li>
     </template>
 
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
